fix: fix emoji message input clipping regression (#126)

--- a/src/ui/chat/components/MessageInputProseMirror.scss
+++ b/src/ui/chat/components/MessageInputProseMirror.scss
@@ -37,8 +37,12 @@
     color: rgba(0, 0, 0, .6);
   }
 
-  // Disable the hover zoom effect for emoji inside the input box
   img.emojione {
+    // Generally we want emoji to have a margin, but in the input box it can
+    // cause them to become clipped.
+    margin: unset;
+
+    // Disable the hover zoom effect for emoji inside the input box.
     transition: unset;
     &:hover { transform: unset; }
   }
